# math

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  config.status  configure  configure.ac  devide.c  math.c  multiply.c  subtract.c
src/: Makefile  Makefile.am  Makefile.in  add.c  config.h  config.h.in  math.c  modulus.c  operator_decode.c
